{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 151,
  "lineage": "97dbde88-1f67-0122-84c3-83be927de024",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d5c19fcdcc01ecb2",
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0d8ec78d422bb6feb",
            "domain": "vpc",
            "id": "eipalloc-0d5c19fcdcc01ecb2",
            "instance": "i-0b0f7fe64d5d3e65f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d405edcf189849ca",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-205-95-133.compute-1.amazonaws.com",
            "public_ip": "54.205.95.133",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.nginx-web-server",
            "aws_network_interface.jenkins",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "simple-web-app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03c158c8e462f2e8c",
            "associate_with_private_ip": "10.0.3.50",
            "association_id": "eipassoc-0762af1e21ea036ca",
            "domain": "vpc",
            "id": "eipalloc-03c158c8e462f2e8c",
            "instance": "i-09f5374e1fdad49b1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-048b5ac5e10ea76ff",
            "private_dns": "ip-10-0-3-50.ec2.internal",
            "private_ip": "10.0.3.50",
            "public_dns": "ec2-34-206-253-113.compute-1.amazonaws.com",
            "public_ip": "34.206.253.113",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.nginx-web-server",
            "aws_network_interface.nginx-web-server",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-nginx",
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "nginx-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:internet-gateway/igw-0a671983298ae61b4",
            "id": "igw-0a671983298ae61b4",
            "owner_id": "812716212234",
            "vpc_id": "vpc-0587b4e11577d91f4"
          },
          "dependencies": [
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:network-interface/eni-0d405edcf189849ca",
            "id": "eni-0d405edcf189849ca",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:2e:52:5f:2b:8f",
            "owner_id": "812716212234",
            "private_dns_name": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "private_ip_list": [
              "10.0.1.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-052cfc3f9b3d41431",
              "sg-07261fb6260699de5",
              "sg-0adde6486fa3ddb08"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f19ad21808e9ee6"
          },
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "nginx-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:network-interface/eni-048b5ac5e10ea76ff",
            "id": "eni-048b5ac5e10ea76ff",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "0e:23:ea:2c:bf:f5",
            "owner_id": "812716212234",
            "private_dns_name": "ip-10-0-3-50.ec2.internal",
            "private_ip": "10.0.3.50",
            "private_ip_list": [
              "10.0.3.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.3.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-052cfc3f9b3d41431",
              "sg-095d4785c33f71872",
              "sg-0adde6486fa3ddb08"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0833bceb7284ab910"
          },
          "dependencies": [
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-nginx",
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "allow-outgoing-access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:route-table/rtb-06056df96ed96b990",
            "id": "rtb-06056df96ed96b990",
            "owner_id": "812716212234",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a671983298ae61b4",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "tags_all": {
              "Name": "Route Table Allowing Outgoing Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0587b4e11577d91f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.nginx-web-server",
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "jenkins-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c419ec4c53dd8724",
            "route_table_id": "rtb-06056df96ed96b990",
            "subnet_id": "subnet-01f19ad21808e9ee6"
          },
          "dependencies": [
            "aws_internet_gateway.nginx-web-server",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "nginx-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1b2a475a97c91ae",
            "route_table_id": "rtb-06056df96ed96b990",
            "subnet_id": "subnet-0833bceb7284ab910"
          },
          "dependencies": [
            "aws_internet_gateway.nginx-web-server",
            "aws_route_table.allow-outgoing-access",
            "aws_subnet.subnet-public-nginx",
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-all-outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:security-group/sg-052cfc3f9b3d41431",
            "description": "Allow all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-052cfc3f9b3d41431",
            "ingress": [],
            "name": "allow-all-outbound",
            "name_prefix": "",
            "owner_id": "812716212234",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0587b4e11577d91f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-jenkins-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:security-group/sg-07261fb6260699de5",
            "description": "Allow jenkins inbound traffic",
            "egress": [],
            "id": "sg-07261fb6260699de5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-jenkins-traffic",
            "name_prefix": "",
            "owner_id": "812716212234",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0587b4e11577d91f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:security-group/sg-0adde6486fa3ddb08",
            "description": "Allow SSH inbound traffic",
            "egress": [],
            "id": "sg-0adde6486fa3ddb08",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow-ssh-traffic",
            "name_prefix": "",
            "owner_id": "812716212234",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0587b4e11577d91f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-web-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:security-group/sg-095d4785c33f71872",
            "description": "Allow HTTP / HTTPS inbound traffic",
            "egress": [],
            "id": "sg-095d4785c33f71872",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow-web-traffic",
            "name_prefix": "",
            "owner_id": "812716212234",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0587b4e11577d91f4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:subnet/subnet-01f19ad21808e9ee6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f19ad21808e9ee6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812716212234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Jenkins Subnet"
            },
            "tags_all": {
              "Name": "Jenkins Subnet"
            },
            "vpc_id": "vpc-0587b4e11577d91f4"
          },
          "dependencies": [
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-public-nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:subnet/subnet-0833bceb7284ab910",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0833bceb7284ab910",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "812716212234",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nginx Subnet"
            },
            "tags_all": {
              "Name": "Nginx Subnet"
            },
            "vpc_id": "vpc-0587b4e11577d91f4"
          },
          "dependencies": [
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "nginx-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:812716212234:vpc/vpc-0587b4e11577d91f4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0174e706f90fade12",
            "default_route_table_id": "rtb-041aa2d42dbb05890",
            "default_security_group_id": "sg-058cd1f347967aca8",
            "dhcp_options_id": "dopt-0201f564e5a03046e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0587b4e11577d91f4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041aa2d42dbb05890",
            "owner_id": "812716212234",
            "tags": {
              "Name": "Nginx WebServer VPC"
            },
            "tags_all": {
              "Name": "Nginx WebServer VPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.application-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:812716212234:instance/i-09f5374e1fdad49b1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "spring-petclinic",
            "id": "i-09f5374e1fdad49b1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nginx-webserver",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-048b5ac5e10ea76ff"
              }
            ],
            "primary_network_interface_id": "eni-048b5ac5e10ea76ff",
            "private_dns": "ip-10-0-3-50.ec2.internal",
            "private_ip": "10.0.3.50",
            "public_dns": "ec2-34-206-253-113.compute-1.amazonaws.com",
            "public_ip": "34.206.253.113",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-03b0ea5bb01bdaa82",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0833bceb7284ab910",
            "tags": {
              "Name": "Nginx Webserver"
            },
            "tags_all": {
              "Name": "Nginx Webserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052cfc3f9b3d41431",
              "sg-095d4785c33f71872",
              "sg-0adde6486fa3ddb08"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.nginx-webserver",
            "aws_iam_policy.ecr-access",
            "aws_iam_role.nginx-webserver",
            "aws_key_pair.nginx-webserver-key",
            "aws_network_interface.nginx-web-server",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-ssh-traffic",
            "aws_security_group.allow-web-traffic",
            "aws_subnet.subnet-public-nginx",
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins",
      "mode": "managed",
      "type": "aws_instance",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0742b4e673072066f",
            "arn": "arn:aws:ec2:us-east-1:812716212234:instance/i-0b0f7fe64d5d3e65f",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "jenkins",
            "id": "i-0b0f7fe64d5d3e65f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d405edcf189849ca"
              }
            ],
            "primary_network_interface_id": "eni-0d405edcf189849ca",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-54-205-95-133.compute-1.amazonaws.com",
            "public_ip": "54.205.95.133",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c53ea29225362bd3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f19ad21808e9ee6",
            "tags": {
              "Name": "Jenkins"
            },
            "tags_all": {
              "Name": "Jenkins"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-052cfc3f9b3d41431",
              "sg-07261fb6260699de5",
              "sg-0adde6486fa3ddb08"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.jenkins",
            "aws_iam_policy.ec2-access",
            "aws_iam_policy.ecr-access",
            "aws_iam_policy.s3-access",
            "aws_iam_policy.secrets-access",
            "aws_iam_role.jenkins",
            "aws_key_pair.jenkins-key",
            "aws_network_interface.jenkins",
            "aws_security_group.allow-all-outbound",
            "aws_security_group.allow-jenkins-traffic",
            "aws_security_group.allow-ssh-traffic",
            "aws_subnet.subnet-public-jenkins",
            "aws_vpc.nginx-web-server"
          ]
        }
      ]
    }
  ]
}